--- a/scratch/style.css
+++ b/scratch/style.css
@@ -50,9 +50,15 @@ body {
   border-radius: 6px;
   /* width: 100%; */
   /* height: 100%; */
-  
+
 }
 
+.slider-adjuster {
+  fill: #18181890;
+  fill: #FFFDF390;
+  stroke: #fff;
+  filter: invert(100%) drop-shadow(0 0 2px #4B4B4BAD);
+}
 .slider-handle {
   fill: #18181890;
   fill: #FFFDF390;
@@ -70,9 +76,9 @@ body {
   fill: #EAD36090;
   filter: invert(100%);
   /* transition: 0.1s; */
-  
 
-  
+
+
 }
 .text-node {
   stroke: #FFFFFF;
