--- a/style.css
+++ b/style.css
@@ -14,65 +14,93 @@ html,
 body {
   width: 100%;
   height: 100%;
-  /* min-width:100vw;min-height:100vh; */
 }
 
 #app,
 .app {
-  display: grid;
-  grid-template-rows: 40px 1fr 75px;
-  grid-template-columns: 1fr;
-  /* justify-content: flex-end; */
-  /* align-items: flex-end; */
-  gap: 0px;
-
   width: 100%;
   height: 100%;
-  overflow: hidden;
-  padding: 5px;
-  /* min-width:100vw;min-height:100vh; */
+}
+
+.app-body {
+  width: 100%;
+  height: 100%;
 }
 
 #controls {
-  display: grid;
-  grid-template-rows: 1fr;
-  grid-template-columns: 1fr 1fr;
-  /* justify-content: center; */
-  /* align-items: center; */
-  display: flex;
-  flex-direction: column;
-  justify-content:space-evenly;
-  align-items: center;
-  gap: 38px;
-  border: 1px solid black;
-  /* transform: rotate(-90deg); */
-
-  /* width: 100%; */
-  /* height: 100%; */
-  /* min-width:100vw;min-height:100vh; */
+  background: #DC0F0FB8;
+  background: #1B46BADE;
 }
 
-#slider-left {}
-
-.slider-container {
-  /* width: 100%; */
-  /* height: 100%; */
-  display: flex;
-  flex-direction: row;
-  justify-content:space-between;
-  align-items: center;
-  gap: 4px;
+.slider-group {
   border: 1px solid black;
-  /* transform: rotate(-90deg); */ 
+  z-index: 500;
 }
 
-.slider-control {}
+.slider-bg {
+  /* RECT */
+  fill: #9A9A9AB8;
+  stroke: #00000050;
+  stroke-width: 1px;
+}
 
-.slider-value-output {
-  width: 50px;
-  height: 50px;
-  background: #C4C5D3;
-  border: 1px solid black;
-  padding: 6px;
-  /* min-width:100vw;min-height:100vh; */
+.slider-track {
+  /* LINE */
+  fill: #7F7F7F;
+  stroke-width: 2.5px;
+  stroke: #616364;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  border-radius: 6px;
+  /* width: 100%; */
+  /* height: 100%; */
+
+}
+
+.slider-adjuster {
+  fill: #18181890;
+  fill: #FFFDF390;
+  stroke: #fff;
+  filter: invert(100%) drop-shadow(0 0 2px #4B4B4BAD);
+}
+
+.slider-handle {
+  fill: #18181890;
+  fill: #FFFDF390;
+  stroke: #fff;
+  filter: invert(100%) drop-shadow(0 0 2px #4B4B4BAD);
+}
+
+.slider-handle.active {
+  fill: #DC0F0F90;
+  fill: #2251CE90;
+  stroke: #fff;
+  filter: invert(100%) drop-shadow(0 0 2px #4B4B4BAD);
+}
+
+.at-origin {
+  fill: #EAD36090;
+  filter: invert(100%);
+  /* transition: 0.1s; */
+}
+
+.paddle {
+  fill: #383838D6;
+  filter: contrast(130%) drop-shadow(0 0 2px #ffffff);
+}
+
+.text-node {
+  stroke: #FFFFFF;
+  fill: #252222;
+  font-weight: 600;
+  font-size: 18px;
+  display: inline-block;
+  outline: none;
+  filter: invert(80%);
+}
+
+.ball {
+  fill: #00000075;
+  stroke: #ffffff90;
+  filter: contrast(130%) drop-shadow(0 0 2px #000000);
 }
