--- a/style.css
+++ b/style.css
@@ -26,12 +26,31 @@ body {
 .app-body {
   width: 100%;
   height: 100%;
+  /* background: #2B2B30; */
+
 }
 
-#controls {
-  background: #DC0F0FB8;
-  background: #1B46BADE;
+#game {
+  /* background: #2B2B30; */
+  /* filter: contrast(110%); */
+  /* backdrop-filter: invert(90%); */
+  /* filter: invert(100%) contrast(90%); */
+  filter: invert(0%) contrast(90%);
+  transition: filter 0.2s ease;
+
 }
+
+#game[data-invert=true] {
+  /* background: #2B2B30; */
+  /* filter: contrast(110%); */
+  /* backdrop-filter: invert(90%); */
+  filter: invert(100%) contrast(90%);
+}
+
+#surface {
+  filter: contrast(0%);
+}
+
 
 .slider-group {
   border: 1px solid black;
@@ -106,6 +125,7 @@ body {
   filter: contrast(130%) drop-shadow(0 0 2px #000000);
 }
 
-#scoreboard{
-  fill: #222FBC;
+#scoreboard {
+  fill: #2B2B30;
+  /* filter: contrast(130%); */
 }
